--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<li data-menuanchor="quatre"><a href="#quatre">-- 4 --</a></li>
 	<li data-menuanchor="cinque"><a href="#cinque">-- 5 --</a></li>
 	<li data-menuanchor="six"><a href="#six">-- 6 --</a></li>
+	<li data-menuanchor="sept"><a href="#huit">-- 7 --</a></li>
+	<li data-menuanchor="huit"><a href="#sept">-- 8 --</a></li>
 </ul>
 
 <div id="myContainer">
@@ -31,48 +33,65 @@
 		</div>
 
 		<div class="ms-section" id="left2">
-			<h1>Left 2 </h1>
+			
 		</div>
 
 		<div class="ms-section" id="left3">
-			<h1>Left 3</h1>
+			<h1>Mes compétences</h1>
 		</div>
 		<div class="ms-section" id="left4">
-			<h1>Left 4</h1>
+			
 		</div>
 
 		<div class="ms-section" id="left5">
-			<h1>Left 5 </h1>
+			<h1>Portofolio</h1>
 		</div>
 
 		<div class="ms-section" id="left6">
-			<h1>Left 6</h1>
-		</div>		
+			
+		</div>
+
+		<div class="ms-section" id="left7">
+			<h1>Ma formation</h1>
+		</div>	
+
+		<div class="ms-section" id="left8">
+
+		</div>			
 	</div>
 	
 	<div class="ms-right">
 		<div class="ms-section" id="right1">
-			<h1>Right 1</h1>
+			
 		</div>
 
 		<div class="ms-section" id="right2">
-			<h1>Right 2</h1>
+			<h1>Qui suis-je?</h1>
 		</div>
 
 		<div class="ms-section" id="right3">
-			<h1>Right 3</h1>
+			
 		</div>
 		<div class="ms-section" id="right4">
-			<h1>Left 4</h1>
+			<h1>Mon parcours</h1>
 		</div>
 
 		<div class="ms-section" id="right5">
-			<h1>Left 5 </h1>
+			
 		</div>
 
 		<div class="ms-section" id="right6">
-			<h1>Left 6</h1>
+			<h1>Mon cv</h1>
+		</div>
+
+		<div class="ms-section" id="right7">
+
+		</div>
+
+		<div class="ms-section" id="right8">
+			<h1>Contact</h1>
 		</div>		
+
 	</div>	
 </div>
 
@@ -82,7 +101,7 @@
 	<script type="text/javascript">
 	 $(document).ready(function() {
             $('#myContainer').multiscroll({
-            	anchors: ['un', 'deux', 'trois','quatre','cinque','six'],
+            	anchors: ['un', 'deux', 'trois','quatre','cinque','six','sept','huit'],
             	menu: '#menu',
             	loopTop: true,
             	loopBottom: true
